--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-     <h1>SomaliDating is up-to-date</h1>
+     <h1>SomaliDating is up-to-date in git hub</h1>
     </body>
     <script src="javv.js"></script>
 </html>
