--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
     
-        
+        <h2>The app was discontinued in February of 2020</h2>  
     </body>
     <script src="javv.js"></script>
 </html>
