--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
 
     <body>
-    
-        <h2 style="color:red">The app was discontinued in February of 2020</h2> 
+    <h2 style="color: red">The app was discontinued in February of 2020</h2>
+        <h2 style="color:red"></h2> 
     </body>
     <script src="javv.js"></script>
 </html>
